--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,22 +1,22 @@
 <!-- Nav-->
 <nav class="nav">
-  <!-- Container-->
-  <div class="container">
+    <!-- Container-->
+    <div class="container">
 
-    <!-- Nav-left -->
-    <div class="nav-left">
-      <a class="nav-item is-brand"  [routerLink]="['/']">Angular2-Express-Starter</a>
+        <!-- Nav-left -->
+        <div class="nav-left">
+            <a class="nav-item is-brand" [routerLink]="['/']">Marley.js</a>
+        </div>
+        <!-- End Nav-left -->
+
+        <!-- Nav-right -->
+        <div class="nav-right nav-menu">
+            <a class="nav-item" [routerLink]="['/']">Home</a>
+            <a class="nav-item" [routerLink]="['/contact']">Contact</a>
+        </div>
+        <!-- End Nav-right -->
+
     </div>
-    <!-- End Nav-left -->
-
-    <!-- Nav-right -->
-    <div class="nav-right nav-menu">
-      <a class="nav-item"  [routerLink]="['/']">Home</a>
-      <a class="nav-item"  [routerLink]="['/contact']">Contact</a>
-    </div>
-    <!-- End Nav-right -->
-
-  </div>
-  <!-- End Container -->
+    <!-- End Container -->
 </nav>
 <!-- End Nav -->
