--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,23 +1,23 @@
 <!-- Hero-->
 <section class="hero is-large has-text-centered">
-  <!-- Hero-body -->
-  <div class="hero-body">
-    <!-- Container -->
-    <div class="container">
+    <!-- Hero-body -->
+    <div class="hero-body">
+        <!-- Container -->
+        <div class="container">
 
-      <h1 class="title is-1  animated bounce">
-        <span>Angular2-Express-Starter!</span>
-      </h1>
-      <h2 class="title is-2">Full-Stack Solution for Angular 2 Developers.</h2>
-      <p class="section-description title subtitle">
-        This boilerplate is based on Express.js Back-End.
-      </p>
-      <a href="https://github.com/PetrNikolas/ExpressNodeApp" target="_blank" class="button is-primary is-medium">Download!</a>
+            <h1 class="title is-1  animated bounce">
+                <span>Marley.js!</span>
+            </h1>
+            <h2 class="title is-2">Mini Starter Kit for complex web apps.</h2>
+            <p class="section-description title subtitle">
+                This boilerplate is based on Express.js Back-End.
+            </p>
+            <a href="https://github.com/PetrNikolas/marley" target="_blank" class="button is-primary is-medium">Download!</a>
 
+        </div>
+        <!-- End Container -->
     </div>
-    <!-- End Container -->
-  </div>
-  <!-- End Hero-body -->
+    <!-- End Hero-body -->
 </section>
 <!-- End Section -->
 
@@ -25,7 +25,7 @@
 <!-- Hr -->
 <div class="container">
 
-  <hr/>
+    <hr/>
 
 </div>
 <!-- End Hr -->
@@ -33,34 +33,34 @@
 
 <!-- Section-->
 <section class="section has-text-centered is-medium">
-  <!-- Container -->
-  <div class="container">
+    <!-- Container -->
+    <div class="container">
 
-    <h2 class="title is-2">
-      <span>Half columns</span>
-    </h2>
+        <h2 class="title is-2">
+            <span>Half columns</span>
+        </h2>
 
-    <!-- Columns -->
-    <div class="columns is-desktop">
+        <!-- Columns -->
+        <div class="columns is-desktop">
 
-      <!-- Half-column -->
-      <div class="column is-half-desktop">
-        <h3 class="title is-3 section-heading">Lorem ipsum 1</h3>
-        <p class="section-description">Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum.</p>
-      </div>
-      <!-- End Half-column -->
+            <!-- Half-column -->
+            <div class="column is-half-desktop">
+                <h3 class="title is-3 section-heading">Lorem ipsum 1</h3>
+                <p class="section-description">Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum.</p>
+            </div>
+            <!-- End Half-column -->
 
-      <!-- Half-column -->
-      <div class="column is-half-desktop">
-        <h3 class="title is-3 section-heading">Lorem ipsum 2</h3>
-        <p class="section-description">Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum.</p>
-      </div>
-      <!-- End Half-column -->
+            <!-- Half-column -->
+            <div class="column is-half-desktop">
+                <h3 class="title is-3 section-heading">Lorem ipsum 2</h3>
+                <p class="section-description">Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum.</p>
+            </div>
+            <!-- End Half-column -->
+
+        </div>
+        <!-- End Columns -->
 
     </div>
-    <!-- End Columns -->
-
-  </div>
-  <!-- End Container -->
+    <!-- End Container -->
 </section>
 <!-- End Section -->
