--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -6,8 +6,10 @@
 <!-- Main Content-->
 <main>
 
-  <!-- Router Outlet -->
-  <router-outlet></router-outlet>
+    <!-- Router Outlet -->
+    <ng2-page-transition>
+        <router-outlet></router-outlet>
+    </ng2-page-transition>
 
 </main>
 <!-- End Main Content -->
