add new reuters in app

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,81 +1,81 @@
 <!-- Hero-->
 <section class="hero is-fullheight has-text-centered">
-  <!-- Hero-body -->
-  <div class="hero-body">
-    <!-- Container -->
-    <div class="container">
+    <!-- Hero-body -->
+    <div class="hero-body">
+        <!-- Container -->
+        <div class="container">
 
-      <h1 class="title is-1  animated bounce">
-        <span>Contact page</span>
-      </h1>
+            <h1 class="title is-1">
+                <span>Contact page</span>
+            </h1>
 
-      <!-- Columns -->
-      <div class="columns is-desktop">
+            <!-- Columns -->
+            <div class="columns is-desktop">
 
-        <!-- Half-column -->
-        <div class="column is-half-desktop">
+                <!-- Half-column -->
+                <div class="column is-half-desktop">
 
-          <!-- Card -->
-          <div class="card">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="http://bulma.io/images/placeholders/1280x960.png" alt="Image">
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="media">
-                <div class="media-left">
-                  <figure class="image" style="height: 40px; width: 40px;">
-                    <img src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
-                  </figure>
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="http://bulma.io/images/placeholders/1280x960.png" alt="Image">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="image" style="height: 40px; width: 40px;">
+                                        <img src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="title is-4">John Smith</p>
+                                    <p class="subtitle is-6">@johnsmith</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Card -->
+
                 </div>
-                <div class="media-content">
-                  <p class="title is-4">John Smith</p>
-                  <p class="subtitle is-6">@johnsmith</p>
+                <!-- End Half-column -->
+
+                <!-- Half-column -->
+                <div class="column is-half-desktop">
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="http://bulma.io/images/placeholders/1280x960.png" alt="Image">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="image" style="height: 40px; width: 40px;">
+                                        <img src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="title is-4">John Smith</p>
+                                    <p class="subtitle is-6">@johnsmith</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Card -->
+
                 </div>
-              </div>
+                <!-- End Half-column -->
+
             </div>
-          </div>
-          <!-- End Card -->
+            <!-- End Columns -->
 
         </div>
-        <!-- End Half-column -->
-
-        <!-- Half-column -->
-        <div class="column is-half-desktop">
-
-          <!-- Card -->
-          <div class="card">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="http://bulma.io/images/placeholders/1280x960.png" alt="Image">
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="media">
-                <div class="media-left">
-                  <figure class="image" style="height: 40px; width: 40px;">
-                    <img src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
-                  </figure>
-                </div>
-                <div class="media-content">
-                  <p class="title is-4">John Smith</p>
-                  <p class="subtitle is-6">@johnsmith</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- End Card -->
-
-        </div>
-        <!-- End Half-column -->
-
-      </div>
-      <!-- End Columns -->
-
+        <!-- End Container -->
     </div>
-    <!-- End Container -->
-  </div>
-  <!-- End Hero-body -->
+    <!-- End Hero-body -->
 </section>
 <!-- End Section -->
