--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -5,7 +5,7 @@
         <!-- Container -->
         <div class="container">
 
-            <h1 class="title is-1  animated bounce">
+            <h1 class="title is-1">
                 <span>Marley.js!</span>
             </h1>
             <h2 class="title is-2">Mini Starter Kit for complex web apps.</h2>
