--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -11,8 +11,7 @@
 
         <!-- Nav-right -->
         <div class="nav-right nav-menu">
-            <a class="nav-item" [routerLink]="['/']">Home</a>
-            <a class="nav-item" [routerLink]="['/contact']">Contact</a>
+            <a class="nav-item" [routerLink]="['/contact']" [routerLinkActive]="['is-active']">Contact</a>
         </div>
         <!-- End Nav-right -->
 
