--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -6,70 +6,28 @@
         <div class="container">
 
             <h1 class="title is-1">
-                <span>Contact page</span>
+                <span>Contact informations</span>
             </h1>
 
             <!-- Columns -->
-            <div class="columns is-desktop">
-
+            <div class="columns is-desktop" *ngIf="users">
                 <!-- Half-column -->
-                <div class="column is-half-desktop">
-
+                <div class="column is-one-third-desktop" *ngFor="let user of users">
                     <!-- Card -->
                     <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-4by3">
-                                <img src="http://bulma.io/images/placeholders/1280x960.png" alt="Image">
-                            </figure>
-                        </div>
                         <div class="card-content">
                             <div class="media">
-                                <div class="media-left">
-                                    <figure class="image" style="height: 40px; width: 40px;">
-                                        <img src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
-                                    </figure>
-                                </div>
                                 <div class="media-content">
-                                    <p class="title is-4">John Smith</p>
-                                    <p class="subtitle is-6">@johnsmith</p>
+                                    <h2 class="title is-3">{{ user.firstname + ' ' + user.secondname }}</h2>
+                                    <p class="title is-5">Nickname: {{ user.username }}</p>
+                                    <p class="subtitle is-5">Email: {{ user.email }}</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- End Card -->
-
                 </div>
                 <!-- End Half-column -->
-
-                <!-- Half-column -->
-                <div class="column is-half-desktop">
-
-                    <!-- Card -->
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-4by3">
-                                <img src="http://bulma.io/images/placeholders/1280x960.png" alt="Image">
-                            </figure>
-                        </div>
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="image" style="height: 40px; width: 40px;">
-                                        <img src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
-                                    </figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="title is-4">John Smith</p>
-                                    <p class="subtitle is-6">@johnsmith</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Card -->
-
-                </div>
-                <!-- End Half-column -->
-
             </div>
             <!-- End Columns -->
 
