--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,7 @@ a{
   transition: color .4s ease-out;
 }
 
-a:hover,a:active,a:focus{
+a:hover{
   color: $brand-color;
   border-bottom: rem(1) solid;
   text-decoration: none;
