--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
 /* Imports */
 
-@import "../../../../assets/stylesheets/libs/bourbon/bourbon";
-@import "../../../../assets/stylesheets/shared/variables";
+@import "../../../assets/stylesheets/libs/bourbon/bourbon";
+@import "../../../assets/stylesheets/shared/variables";
 
 /* Header Styles */
 
