update texts, views, controllers, templates

--- a/api/web/templates/page/index.html.eex
+++ b/api/web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
-<section class="hero is-fullheight has-text-centered">
+<section class="hero is-large has-text-centered">
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
