update bulma and css bug fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* Imports */
 
+@import "../node_modules/bulma/css/bulma.css";
 @import "assets/stylesheets/variables";
 @import "assets/stylesheets/loader";
 
