--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,6 @@
 /* Imports */
-
-@import "../node_modules/bulma/css/bulma.css";
-@import "assets/stylesheets/variables";
-@import "assets/stylesheets/loader";
+@import "./stylesheets/variables";
+@import "./stylesheets/loader";
 
 /* General Styles */
 
