new architecture and small update and bug fixes

--- a/src/app/features/contact/pages/contact.component.html
+++ b/src/app/features/contact/pages/contact.component.html
@@ -6,7 +6,7 @@
         <div class="container">
 
             <h1 class="title is-1">
-                <span>Contact informations</span>
+                <span>Contact</span>
             </h1>
 
         </div>
