--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,7 +5,7 @@
         <!-- Content -->
         <div class="content has-text-centered">
             <p>
-                <strong><a href="http://www.petrnikolas.com/marley">Marley</a></strong> by <a href="http://www.petrnikolas.com/">Petr Nikolas</a>.
+                <strong><a href="https://github.com/PetrNikolas/marley">Marley</a></strong> by <a href="http://www.petrnikolas.com/">Petr Nikolas</a>.
             </p>
         </div>
         <!-- End Content -->
