--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,21 +1,11 @@
-<!-- Nav-->
-<nav class="nav">
-    <!-- Container-->
-    <div class="container">
+<div class="navbar-menu">
+  <div class="navbar-start">
+    <!-- navbar items -->
+    <a class="navbar-item is-brand" [routerLink]="['/']">Marley</a>
+  </div>
 
-        <!-- Nav-left -->
-        <div class="nav-left">
-            <a class="nav-item is-brand" [routerLink]="['/']">Marley</a>
-        </div>
-        <!-- End Nav-left -->
-
-        <!-- Nav-right -->
-        <div class="nav-right nav-menu">
-            <a class="nav-item" [routerLink]="['/contact']" [routerLinkActive]="['is-active']">Contact</a>
-        </div>
-        <!-- End Nav-right -->
-
-    </div>
-    <!-- End Container -->
-</nav>
-<!-- End Nav -->
+  <div class="navbar-end">
+    <!-- navbar items -->
+    <a class="navbar-item" [routerLink]="['/contact']" [routerLinkActive]="['is-active']">Contact</a>
+  </div>
+</div>
