added prettier, stylelint and gitlab-ci files

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-menu">
   <div class="navbar-start">
     <!-- navbar items -->
-    <a class="navbar-item is-brand" [routerLink]="['/']">Marley</a>
+    <a class="navbar-item is-brand" [routerLink]="['/']">Marley.js</a>
   </div>
 
   <div class="navbar-end">
