--- a/src/app/features/welcome/pages/welcome.component.html
+++ b/src/app/features/welcome/pages/welcome.component.html
@@ -6,7 +6,7 @@
         <div class="container">
 
             <h1 class="title is-1">
-                <span>Marley!</span>
+                <span>Marley.js!</span>
             </h1>
             <h2 class="title is-2">Modern Angular 6+ Stack.</h2>
             <a href="https://github.com/PetrNikolas/marley" target="_blank" class="button is-primary is-medium">Download!</a>
