--- a/apps/landing-page/src/app/features/welcome/pages/welcome.component.html
+++ b/apps/landing-page/src/app/features/welcome/pages/welcome.component.html
@@ -8,7 +8,7 @@
             <h1 class="title is-1">
                 <span>Marley.js!</span>
             </h1>
-            <h2 class="title is-2">Modern Angular 6+ Stack.</h2>
+            <h2 class="title is-2">Modern Full-Stack !-> Angular 6+ and Node.js API <-! Starter Kit.</h2>
             <a id="button" href="https://github.com/PetrNikolas/marley" target="_blank" class="button is-primary is-medium">Download!</a>
 
         </div>
