--- a/apps/admin/src/app/app.component.html
+++ b/apps/admin/src/app/app.component.html
@@ -13,3 +13,5 @@ Nx is designed to help you create and build enterprise grade Angular application
 <h2>Quick Start & Documentation</h2>
 
 <a href="https://nrwl.io/nx">Watch a 5-minute video on how to get started with Nx.</a>
+
+<app-shell [title]="title"></app-shell>
