--- a/apps/admin/src/app/app.component.html
+++ b/apps/admin/src/app/app.component.html
@@ -14,4 +14,4 @@ Nx is designed to help you create and build enterprise grade Angular application
 
 <a href="https://nrwl.io/nx">Watch a 5-minute video on how to get started with Nx.</a>
 
-<app-shell [title]="title"></app-shell>
+<marleyjs-shell [title]="title"></marleyjs-shell>
