--- a/apps/landing-page/src/app/modules/contact/pages/contact.component.html
+++ b/apps/landing-page/src/app/modules/contact/pages/contact.component.html
@@ -14,14 +14,14 @@
                         <div class="card">
                             <div class="card-image">
                                 <figure class="image is-2by1">
-                                <img src="{{person.big_image}}" alt="Placeholder image">
+                                <img src="{{person.big_image}}" alt="Placeholder image" />
                                 </figure>
                             </div>
                             <div class="card-content">
                                 <div class="media">
                                 <div class="media-left">
                                     <figure class="image is-48x48">
-                                    <img src="{{person.small_image}}" alt="Placeholder image">
+                                    <img src="{{person.small_image}}" alt="Placeholder image" />
                                     </figure>
                                 </div>
                                 <div class="media-content">
