--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -1,7 +1,7 @@
 
-<div style="text-align:center">
+<div>
   <h1>Welcome to {{title}}!</h1>
-  <img width="300" src="https://raw.githubusercontent.com/nrwl/nx/master/nx-logo.png">
+  <img width="300" src="https://raw.githubusercontent.com/nrwl/nx/master/nx-logo.png" />
 </div>
 
 <h2>This is an Angular CLI app built with Nrwl Nx!</h2>
